--- a/src/components/layout/navbar/search/search.module.css
+++ b/src/components/layout/navbar/search/search.module.css
@@ -6,7 +6,7 @@
 .searchButton {
   color: var(--white);
   border-radius: var(--main-border-radius);
-  border: none;
+  border: 1px solid transparent;
   padding: 0.5rem 0.6rem;
   display: flex;
   align-items: center;
