--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   background-color: black;
   font-family: "IBM Plex Mono", monospace;
-
+  box-sizing: border-box;
   font-style: normal;
 }
 
